--- a/simias/configure.in
+++ b/simias/configure.in
@@ -119,6 +119,11 @@ case $host_os in
         PKG_CHECK_MODULES(LOG4NET, log4net >= 1.2.9)
         AC_SUBST(LOG4NET_PREFIX)
         AC_SUBST(LOG4NET_LIBS)
+		# this needs to be here but libflaim is broken right now
+		# so don't do this check
+        #PKG_CHECK_MODULES(LIBFLAIM, libflaim >= 4.8.0)
+        #AC_SUBST(LOG4NET_PREFIX)
+        #AC_SUBST(LOG4NET_LIBS)
     ;;
     darwin*)
 		# fix up the flaim libraries
