--- a/configure.in
+++ b/configure.in
@@ -119,9 +119,11 @@ case $host_os in
         PKG_CHECK_MODULES(LOG4NET, log4net >= 1.2.9)
         AC_SUBST(LOG4NET_PREFIX)
         AC_SUBST(LOG4NET_LIBS)
-        PKG_CHECK_MODULES(LIBFLAIM, libflaim >= 1.2.9)
-        AC_SUBST(LOG4NET_PREFIX)
-        AC_SUBST(LOG4NET_LIBS)
+		# This should be here but flaim is broken so don't
+		# do this check right now
+        #PKG_CHECK_MODULES(LIBFLAIM, libflaim >= 4.8.0)
+        #AC_SUBST(LOG4NET_PREFIX)
+        #AC_SUBST(LOG4NET_LIBS)
     ;;
     darwin*)
 		# fix up the flaim libraries
