Moved Enterprise Domain creation back to the server rather than the providers
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5907 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias-server/src/Makefile.am
+++ b/simias-server/src/Makefile.am
@@ -1,7 +1,7 @@
 # handle Mono secondary dependencies
 export MONO_PATH := $(MONO_PATH):$(DESTDIR)$(libdir)
 
-SimiasServer_CSFILES = $(srcdir)/Service.cs $(srcdir)/Ajax.cs $(srcdir)/DomainInfo.cs $(srcdir)/ProvisionInfo.cs $(srcdir)/DomainService.asmx.cs $(srcdir)/Register.aspx.cs $(srcdir)/IdentitySyncService.cs $(srcdir)/IIdentitySyncProvider.cs $(srcdir)/IdentitySyncManager.asmx.cs
+SimiasServer_CSFILES = $(srcdir)/Service.cs $(srcdir)/Ajax.cs $(srcdir)/Domain.cs $(srcdir)/DomainInfo.cs $(srcdir)/ProvisionInfo.cs $(srcdir)/DomainService.asmx.cs $(srcdir)/Register.aspx.cs $(srcdir)/IdentitySyncService.cs $(srcdir)/IIdentitySyncProvider.cs $(srcdir)/IdentitySyncManager.asmx.cs $(srcdir)/Registration.asmx.cs
 SimiasServer_CSFILES_CSC := $(subst /,$(SEP),$(SimiasServer_CSFILES))
 SimiasServer_INCLUDES =
 SimiasServer_RESOURCES =
