--- a/simias-server/src/Simias.config.in
+++ b/simias-server/src/Simias.config.in
@@ -1,8 +1,9 @@
 <configuration>
-  <section name="Domain">
+  <section name="EnterpriseDomain">
+    <setting name="Description" value="Simias Enterprise Server" />
     <setting name="ServerName" value="Simias Server" />
-    <setting name="AdminName" value="SimiasAdmin" />
-    <setting name="AdminPassword" value="root" />
+    <setting name="AdminName" value="Admin" />
+    <setting name="AdminPassword" value="simias" />
   </section>
   <section name="Authentication">
 	<setting name="SimiasAuthNotRequired" value="Login.ashx, Simias.asmx:PingSimias, DomainService.asmx:GetDomainID" />
