updated configure script and various files to enable building on mono 1.1.8 and mono 1.1.13
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/ifolder_3_4@5908 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/configure.in
+++ b/simias/configure.in
@@ -82,6 +82,10 @@ case $CSC in
         MONO_DEBUG='mono --debug'
         MONO_PATH=
         SYSTEM_XML='System.Xml.dll'
+		if pkg-config --atleast-version=1.1.13 mono > /dev/null 2>&1
+		then
+			CSCFLAGS="$CSCFLAGS /d:MONONATIVE"
+		fi
     ;;
     #
     # .NET-specific configuration
