Added the libFlaimWrapper_la_LDFLAGS line back in so we can tell the build to link libflaim.a in statically.  Without doing this, the build will link against the dynamic library (libflaim.so).
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5912 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/FlaimProvider/FlaimWrapper/Makefile.am
+++ b/simias/src/FlaimProvider/FlaimWrapper/Makefile.am
@@ -86,6 +86,7 @@ libFlaimWrapper_la_SOURCES = 	CSPObjectIterator.cpp \
 
 if LINUX
 libFlaimWrapper_la_CXXFLAGS = -fshort-wchar -DFLAIMWRAPPER_EXPORTS -DUNIX -D_REENTRANT -c
+libFlaimWrapper_la_LDFLAGS = -static -lflaim
 
 install-exec-local: libFlaimWrapper.la
 	$(mkinstalldirs) $(DESTDIR)$(webbindir)
