Added a dependency on the uuid package being installed.  FIXME: need to still use normal words to describe that this comes from the e2fsprogs-devel package
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@5920 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/configure.in
+++ b/configure.in
@@ -128,6 +128,9 @@ case $host_os in
         #PKG_CHECK_MODULES(LIBFLAIM, libflaim >= 4.8.0)
         #AC_SUBST(LOG4NET_PREFIX)
         #AC_SUBST(LOG4NET_LIBS)
+	PKG_CHECK_MODULES(UUID, uuid)
+	AC_SUBST(UUID_CFLAGS)
+	AC_SUBST(UUID_LIBS)
     ;;
     darwin*)
 		# fix up the flaim libraries
