fixed up Simias.config to include Identity section
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5923 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias-server/src/Simias.config.in
+++ b/simias-server/src/Simias.config.in
@@ -9,6 +9,20 @@
 	<setting name="SimiasAuthNotRequired" value="Registration.asmx, Login.ashx, Simias.asmx:PingSimias, DomainService.asmx:GetDomainID" />
 	<setting name="SimiasRequireSSL" value="no" />
   </section>
+  <section name="Identity">
+  	<!--
+	<setting name="Assembly" value="Simias.Server" />
+	<setting name="Class" value="Simias.Server.InternalUser" />
+	-->
+	<!--
+	<setting name="Assembly" value="Simias.SimpleSync" />
+	<setting name="Class" value="Simias.SimpleServer.User" />
+	-->
+	<!--
+	<setting name="Assembly" value="Simias.MdbSync" />
+	<setting name="Class" value="Simias.MdbSync.User" />
+	-->
+  </section>
   <section name="StoreProvider">
     <setting name="Assembly" value="SimiasLib.dll" />
     <setting name="Type" value="@_StoreProviderType_@" />
