Internal identity defaulted
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5929 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias-server/src/Simias.config.in
+++ b/simias-server/src/Simias.config.in
@@ -10,12 +10,10 @@
 	<setting name="SimiasRequireSSL" value="no" />
   </section>
   <section name="Identity">
-  	<!--
 	<setting name="Assembly" value="Simias.Server" />
 	<setting name="Class" value="Simias.Server.InternalUser" />
-	-->
 	<!--
-	<setting name="Assembly" value="Simias.SimpleSync" />
+	<setting name="Assembly" value="Simias.SimpleServer" />
 	<setting name="Class" value="Simias.SimpleServer.User" />
 	-->
 	<!--
