fixup for new provider directories
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5930 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias-server/configure.in
+++ b/simias-server/configure.in
@@ -511,8 +511,8 @@ esac
 AC_OUTPUT([
 Makefile
 src/Makefile
-src/MdbSync/Makefile
-src/SimpleSync/Makefile
+src/MdbProvider/Makefile
+src/SimpleProvider/Makefile
 ])
 
 
