--- a/Simias.HttpFile/Simias.HttpFile.csproj
+++ b/Simias.HttpFile/Simias.HttpFile.csproj
@@ -86,7 +86,7 @@
                 />
                 <Reference
                     Name = "System.XML"
-                    AssemblyName = "System.XML"
+                    AssemblyName = "System.Xml"
                     HintPath = "..\..\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.XML.dll"
                 />
             </References>
@@ -94,11 +94,11 @@
         <Files>
             <Include>
                 <File
-                    RelPath = "AssemblyInfo.cs"
+                    RelPath = "src\AssemblyInfo.cs"
                     BuildAction = "Compile"
                 />
                 <File
-                    RelPath = "SimiasFile.cs"
+                    RelPath = "src\SimiasFile.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
