--- a/Simias.Rss/FeedSync/FeedSync.csproj
+++ b/Simias.Rss/FeedSync/FeedSync.csproj
@@ -79,6 +79,11 @@
                     AssemblyName = "System.Xml"
                     HintPath = "..\..\..\..\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.XML.dll"
                 />
+                <Reference
+                    Name = "Novell.Collaboration.Feed"
+                    AssemblyName = "Novell.Collaboration.Feed"
+                    HintPath = "Novell.Collaboration.Feed\bin\Debug\Novell.Collaboration.Feed.dll"
+                />
             </References>
         </Build>
         <Files>
