--- a/src/SimiasApp/simias.in
+++ b/src/SimiasApp/simias.in
@@ -9,7 +9,7 @@
 #
 #######################################################################
 
-export MONO_PATH=@_webbindir_@:$MONO_PATH
+export MONO_PATH=@_webbindir_@:$MONO_PATH:/usr/lib
 
 if [ "${OSTYPE:0:6}" == "darwin" ]
 then
@@ -17,7 +17,7 @@ then
 	export DYLD_LIBRARY_PATH=@_webbindir_@:/Library/Frameworks/Mono.framework/Versions/Current/lib:$DYLD_LIBRARY_PATH
 	ulimit -n 2048
 else
-	export LD_LIBRARY_PATH=@_webbindir_@:$LD_LIBRARY_PATH
+	export LD_LIBRARY_PATH=@_webbindir_@:$LD_LIBRARY_PATH:/usr/lib
 fi
 
 cd @_bindir_@
