added a path setting for Mac to add the mono.pc to check mono versions
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/ifolder_3_4@6037 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/configure.in
+++ b/simias/configure.in
@@ -24,7 +24,9 @@ case $host_os in
         SIMIAS_OS='darwin'
         AC_CHECK_PROG(CSC, mcs, mcs)
         test -z "$CSC" && AC_MSG_ERROR([no C Sharp compiler: mcs not found in \$PATH])
-	    PKG_CONFIG_DIR='lib'
+	export PKG_CONFIG_PATH="/Library/Frameworks/Mono.framework/Versions/Current/lib/pkgconfig:$PKG_CONFIG_PATH"
+	PKG_CONFIG_DIR='lib'
+
     ;;
     cygwin*)
         SIMIAS_OS='windows'
