--- a/simias/configure.in
+++ b/simias/configure.in
@@ -24,6 +24,7 @@ case $host_os in
         SIMIAS_OS='darwin'
         AC_CHECK_PROG(CSC, mcs, mcs)
         test -z "$CSC" && AC_MSG_ERROR([no C Sharp compiler: mcs not found in \$PATH])
+		export PKG_CONFIG_PATH="/Library/Frameworks/Mono.framework/Versions/Current/lib/pkgconfig:$PKG_CONFIG_PATH"
 	    PKG_CONFIG_DIR='lib'
     ;;
     cygwin*)
