--- a/simias/src/FlaimProvider/FlaimWrapper/FlaimWrapper.vcproj
+++ b/simias/src/FlaimProvider/FlaimWrapper/FlaimWrapper.vcproj
@@ -24,7 +24,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories="&quot;$(SolutionDir)\external\flaim\include&quot;"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)\external\libflaim&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;FLAIMWRAPPER_EXPORTS"
 				StringPooling="TRUE"
 				RuntimeLibrary="0"
@@ -43,11 +43,11 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="rpcrt4.lib ws2_32.lib odbc32.lib odbccp32.lib flm.lib"
+				AdditionalDependencies="rpcrt4.lib ws2_32.lib odbc32.lib odbccp32.lib flaim.lib"
 				OutputFile=".\Release/FlaimWrapper.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="&quot;$(SolutionDir)\external\flaim\nt\release&quot;"
+				AdditionalLibraryDirectories="&quot;$(SolutionDir)\external\libflaim\win32&quot;"
 				IgnoreDefaultLibraryNames="LIBCMT.lib"
 				ProgramDatabaseFile=".\Release/FlaimWrapper.pdb"
 				ImportLibrary=".\Release/FlaimWrapper.lib"
@@ -96,7 +96,7 @@ if exist $(IntDir)\$(TargetName).pdb copy $(IntDir)\$(TargetName).pdb $(Solution
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(SolutionDir)\external\flaim\include&quot;"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)\external\libflaim&quot;"
 				PreprocessorDefinitions="WIN32;DEBUG;_DEBUG;_WINDOWS;_USRDLL;FLAIMWRAPPER_EXPORTS"
 				ExceptionHandling="TRUE"
 				BasicRuntimeChecks="0"
@@ -115,11 +115,11 @@ if exist $(IntDir)\$(TargetName).pdb copy $(IntDir)\$(TargetName).pdb $(Solution
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="rpcrt4.lib ws2_32.lib imagehlp.lib flm.lib"
+				AdditionalDependencies="rpcrt4.lib ws2_32.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib imagehlp.lib flaim.lib"
 				OutputFile=".\Debug/FlaimWrapper.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="&quot;$(SolutionDir)\external\flaim\nt\release&quot;"
+				AdditionalLibraryDirectories="&quot;$(SolutionDir)\external\libflaim\win32&quot;"
 				IgnoreDefaultLibraryNames="LIBCMTD.lib"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile=".\Debug/FlaimWrapper.pdb"
