--- a/simias/configure.in
+++ b/simias/configure.in
@@ -495,6 +495,9 @@ AC_SUBST(XML2_LIBS)
 #
 AC_OUTPUT([
 Makefile
+simias.pc
+simias_client.pc
+simias_client-c.pc
 src/Makefile
 src/SimiasClient/Makefile
 src/SimiasClient/libsimias-event/Makefile
