--- a/simias/simias-client-c.pc.in
+++ b/simias/simias-client-c.pc.in
@@ -1,14 +1,14 @@
 # pkg-config metadata file for simias event client
 Name: SimiasClient-C
 Description: C Libraries for Simias
-Version: @_VERSION_@
-Requires: @_PKG_CONFIG_REQUIRES_@
-Conflicts: @_PKG_CONFIG_CONFLICTS_@
+Version: @VERSION@
+Requires: @PKG_CONFIG_REQUIRES@
+Conflicts: @PKG_CONFIG_CONFLICTS@
 
-prefix=@_prefix_@
-exec_prefix=@_exec_prefix_@
-libdir=@_libdir_@
-includedir=@_prefix_@/include/simias
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@prefix@/include/simias
 
 Libs:-Wl,-rpath,${libdir} -L${libdir} -lsimias -lsimias-event ${libdir}/libsimias-manager.a
 Cflags: -I${includedir}
