moved the simias.pc file to be down with SimiasLib.dll (which it is for)
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/osswork@6077 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/Makefile.am
+++ b/simias/Makefile.am
@@ -51,7 +51,7 @@ maintainer-clean-local:
 	rm -f install-sh install-sh.lnk INSTALL INSTALL.lnk
 	rm -f missing missing.lnk mkinstalldirs mkinstalldir.lnk
 	rm -rf autom4te.cache
-	rm -rf simias.pc simias-client.pc simias-client-c.pc
+	rm -rf simias-client.pc simias-client-c.pc
 
 .PHONY: test
 test: install
