--- a/simias/configure.in
+++ b/simias/configure.in
@@ -495,28 +495,24 @@ AC_SUBST(XML2_LIBS)
 #
 AC_OUTPUT([
 Makefile
-simias.pc
-simias_client.pc
-simias_client-c.pc
+simias-client.pc
+simias-client-c.pc
 src/Makefile
-src/SimiasClient/Makefile
-src/SimiasClient/libsimias-event/Makefile
-src/SimiasClient/libsimias-manager/Makefile
-src/SimiasLib.dll/Makefile
-src/SimiasLib.dll/SimiasLib.dll.config
-src/FlaimProvider/Makefile
-src/FlaimProvider/FlaimWrapper/Makefile
-src/SimiasApp/Makefile
-src/WebService/Makefile
-src/POBoxWS/Makefile
-src/SyncService/Makefile
-src/SqliteProvider/Makefile
-src/libsimias/Makefile
-src/api/Makefile
-src/api/libsimias/Makefile
-src/api/libsimias/simias2-c.pc
-src/api/WebService/Makefile
-src/api/WebService/AssemblyInfo.cs
+src/Core/Makefile
+src/Core/SimiasClient/Makefile
+src/Core/SimiasClient/libsimias-event/Makefile
+src/Core/SimiasClient/libsimias-manager/Makefile
+src/Core/SimiasLib.dll/Makefile
+src/Core/SimiasLib.dll/SimiasLib.dll.config
+src/Core/SimiasLib.dll/simias.pc
+src/Core/FlaimProvider/Makefile
+src/Core/FlaimProvider/FlaimWrapper/Makefile
+src/Core/SimiasApp/Makefile
+src/Core/WebService/Makefile
+src/Core/POBoxWS/Makefile
+src/Core/SyncService/Makefile
+src/Core/SqliteProvider/Makefile
+src/Core/libsimias/Makefile
 test/Makefile
 test/Common/Makefile
 test/ChangeLog/Makefile
