moved the simias-client.pc.in to SimiasClient which is where it is used
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/osswork@6078 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/configure.in
+++ b/simias/configure.in
@@ -495,11 +495,11 @@ AC_SUBST(XML2_LIBS)
 #
 AC_OUTPUT([
 Makefile
-simias-client.pc
 simias-client-c.pc
 src/Makefile
 src/Core/Makefile
 src/Core/SimiasClient/Makefile
+src/Core/SimiasClient/simias-client.pc
 src/Core/SimiasClient/libsimias-event/Makefile
 src/Core/SimiasClient/libsimias-manager/Makefile
 src/Core/SimiasLib.dll/Makefile
