updated Core to core everywhere
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/osswork@6081 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/configure.in
+++ b/simias/configure.in
@@ -496,23 +496,23 @@ AC_SUBST(XML2_LIBS)
 AC_OUTPUT([
 Makefile
 src/Makefile
-src/Core/Makefile
-src/Core/SimiasClient/Makefile
-src/Core/SimiasClient/simias-client.pc
-src/Core/SimiasClient/simias-client-c.pc
-src/Core/SimiasClient/libsimias-event/Makefile
-src/Core/SimiasClient/libsimias-manager/Makefile
-src/Core/SimiasLib.dll/Makefile
-src/Core/SimiasLib.dll/SimiasLib.dll.config
-src/Core/SimiasLib.dll/simias.pc
-src/Core/FlaimProvider/Makefile
-src/Core/FlaimProvider/FlaimWrapper/Makefile
-src/Core/SimiasApp/Makefile
-src/Core/WebService/Makefile
-src/Core/POBoxWS/Makefile
-src/Core/SyncService/Makefile
-src/Core/SqliteProvider/Makefile
-src/Core/libsimias/Makefile
+src/core/Makefile
+src/core/SimiasClient/Makefile
+src/core/SimiasClient/simias-client.pc
+src/core/SimiasClient/simias-client-c.pc
+src/core/SimiasClient/libsimias-event/Makefile
+src/core/SimiasClient/libsimias-manager/Makefile
+src/core/SimiasLib.dll/Makefile
+src/core/SimiasLib.dll/SimiasLib.dll.config
+src/core/SimiasLib.dll/simias.pc
+src/core/FlaimProvider/Makefile
+src/core/FlaimProvider/FlaimWrapper/Makefile
+src/core/SimiasApp/Makefile
+src/core/WebService/Makefile
+src/core/POBoxWS/Makefile
+src/core/SyncService/Makefile
+src/core/SqliteProvider/Makefile
+src/core/libsimias/Makefile
 test/Makefile
 test/Common/Makefile
 test/ChangeLog/Makefile
