started to remove configure options in make
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/osswork@6083 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/configure.in
+++ b/simias/configure.in
@@ -497,6 +497,8 @@ AC_OUTPUT([
 Makefile
 src/Makefile
 src/core/Makefile
+src/core/Common/MyDns.cs
+src/core/Common/Simias.config
 src/core/SimiasClient/Makefile
 src/core/SimiasClient/simias-client.pc
 src/core/SimiasClient/simias-client-c.pc
