--- a/simias/src/core/POBoxWS/AssemblyInfo.cs.in
+++ b/simias/src/core/POBoxWS/AssemblyInfo.cs.in
@@ -27,8 +27,8 @@ using System.Runtime.CompilerServices;
 // by using the '*' as shown below:
 //
 
-[assembly: AssemblyVersion("@_VERSION_@")]
-[assembly: AssemblyInformationalVersion("@_VERSION_@")]
+[assembly: AssemblyVersion("@VERSION@")]
+[assembly: AssemblyInformationalVersion("@VERSION@")]
 
 //
 // In order to sign your assembly you must specify a key to use. Refer to the 
