updated more .in files tobe configured during configure
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/osswork@6089 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/configure.in
+++ b/simias/configure.in
@@ -508,6 +508,7 @@ src/core/SimiasClient/libsimias-event/Makefile
 src/core/SimiasClient/libsimias-manager/Makefile
 src/core/SimiasLib.dll/Makefile
 src/core/SimiasLib.dll/SimiasLib.dll.config
+src/core/SimiasLib.dll/AssemblyInfo.cs
 src/core/SimiasLib.dll/simias.pc
 src/core/FlaimProvider/Makefile
 src/core/FlaimProvider/FlaimWrapper/Makefile
