updated more sed commands that should be configure
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/osswork@6091 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/configure.in
+++ b/simias/configure.in
@@ -513,6 +513,9 @@ src/core/SimiasLib.dll/simias.pc
 src/core/FlaimProvider/Makefile
 src/core/FlaimProvider/FlaimWrapper/Makefile
 src/core/SimiasApp/Makefile
+src/core/SimiasApp/simias
+src/core/SimiasApp/SimiasDirectoryMapping
+src/core/SimiasApp/AssemblyInfo.cs
 src/core/WebService/AssemblyInfo.cs
 src/core/WebService/Makefile
 src/core/POBoxWS/AssemblyInfo.cs
