more sed commands gone
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/osswork@6093 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/configure.in
+++ b/simias/configure.in
@@ -520,6 +520,7 @@ src/core/WebService/AssemblyInfo.cs
 src/core/WebService/Makefile
 src/core/POBoxWS/AssemblyInfo.cs
 src/core/POBoxWS/Makefile
+src/core/SyncService/AssemblyInfo.cs
 src/core/SyncService/Makefile
 src/core/SqliteProvider/Makefile
 src/core/libsimias/Makefile
