--- a/simias/src/core/FlaimProvider/FlaimWrapper/Makefile.am
+++ b/simias/src/core/FlaimProvider/FlaimWrapper/Makefile.am
@@ -60,11 +60,11 @@ maintainer-clean-local:
 	rm -rf $(COMMON_MAINTAINER_CLEAN_FILES)
 
 if DEBUG
-CXX_FLAGS=/nologo /MTd /W3 /Gm /GX /ZI /Od /I "..\..\..\external\libflaim" /D "WIN32" /D "DEBUG" /D "_DEBUG" /D "_WINDOWS" /D "_MBCS" /D "_USRDLL" /D "FLAIMWRAPPER_EXPORTS" /FD /GZ /c
-MYLDFLAGS=rpcrt4.lib ws2_32.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib imagehlp.lib flaim.lib /nologo /dll /incremental:yes /pdb:"FlaimWrapper.pdb" /debug /machine:I386 /nodefaultlib:"LIBCMTD.lib" /implib:"FlaimWrapper.lib" /libpath:"..\..\..\external\libflaim\win32"
+CXX_FLAGS=/nologo /MTd /W3 /Gm /GX /ZI /Od /I "..\..\..\..\external\libflaim" /D "WIN32" /D "DEBUG" /D "_DEBUG" /D "_WINDOWS" /D "_MBCS" /D "_USRDLL" /D "FLAIMWRAPPER_EXPORTS" /FD /GZ /c
+MYLDFLAGS=rpcrt4.lib ws2_32.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib imagehlp.lib flaim.lib /nologo /dll /incremental:yes /pdb:"FlaimWrapper.pdb" /debug /machine:I386 /nodefaultlib:"LIBCMTD.lib" /implib:"FlaimWrapper.lib" /libpath:"..\..\..\..\external\libflaim\win32"
 else
-CXX_FLAGS=/nologo /MT /W3 /GX /O2 /I "..\..\..\external\libflaim" /D "WIN32" /D "_MBCS" /D "NDEBUG" /D "_WINDOWS" /D "_MBCS" /D "_USRDLL" /D "FLAIMWRAPPER_EXPORTS" /FD /c
-MYLDFLAGS=rpcrt4.lib ws2_32.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib flaim.lib /nologo /dll /incremental:no /pdb:"FlaimWrapper.pdb" /machine:I386 /nodefaultlib:"LIBCMT.lib" /implib:"FlaimWrapper.lib" /libpath:"..\..\..\external\libflaim\win32"
+CXX_FLAGS=/nologo /MT /W3 /GX /O2 /I "..\..\..\..\external\libflaim" /D "WIN32" /D "_MBCS" /D "NDEBUG" /D "_WINDOWS" /D "_MBCS" /D "_USRDLL" /D "FLAIMWRAPPER_EXPORTS" /FD /c
+MYLDFLAGS=rpcrt4.lib ws2_32.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib flaim.lib /nologo /dll /incremental:no /pdb:"FlaimWrapper.pdb" /machine:I386 /nodefaultlib:"LIBCMT.lib" /implib:"FlaimWrapper.lib" /libpath:"..\..\..\..\external\libflaim\win32"
 endif
 
 
@@ -101,9 +101,9 @@ uninstall-local:
 endif
 
 if DARWIN
-libFlaimWrapper_la_CXXFLAGS = -I"../../../external/libflaim" -fshort-wchar -DFLAIMWRAPPER_EXPORTS -DUNIX -D_REENTRANT -DOSX -c
+libFlaimWrapper_la_CXXFLAGS = -I"../../../../external/libflaim" -fshort-wchar -DFLAIMWRAPPER_EXPORTS -DUNIX -D_REENTRANT -DOSX -c
 
-libFlaimWrapper_la_LDFLAGS = -L"../../../external/libflaim/osx" -static -lflaim
+libFlaimWrapper_la_LDFLAGS = -L"../../../../external/libflaim/osx" -static -lflaim
 
 install-exec-local: libFlaimWrapper.la
 	$(mkinstalldirs) $(DESTDIR)$(webbindir)
